SERVER-17378 pass an explicit no timeout to compact in WiredTiger

(cherry picked from commit ac525a4566a46b6b79a8465903b2ab0391eab506)